@@ -1,5 +1,10 @@
 2001-06-12  Dave Peticolas  <dave@krondo.com>
 
+	* src/gnome/reconcile-list.c: obey new option below
+
+	* src/scm/prefs.scm: add option wrt checking off cleared
+	transactions when reconciling
+
 	* src/register/table-allgui.[ch]: move function to .c file
 
 	* src/scm/tip-list.scm: update tip
